# CmakeCI

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
test/: CMakeLists.txt  tst_Template.cpp
